navbar issue alignement fixed

--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -14,7 +14,8 @@
   margin: 1rem;
   display: flex;
   flex-direction: row;
-  justify-content: left;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .buttons {
@@ -91,7 +92,7 @@
   margin-left: -4rem;
 }
 
-.mark_star{
+.mark_star {
   display: hidden;
 }
 
@@ -122,7 +123,7 @@
     justify-content: start;
   }
 
-  .mark_star{
+  .mark_star {
     display: block;
   }
 }
@@ -133,7 +134,7 @@
     justify-content: space-between;
   }
 
-  .mark_star{
+  .mark_star {
     display: block;
   }
 
